# fourohfour

./: .gitignore  README.md
scripts/: generate_jwt_secret.py
src/: README.md
src/desktop-client/: README.md
src/desktop-client/client-404/: CMakeLists.txt  TitlePage.ui  basepage.cpp  basepage.h  constants.h  encryptionhelper.cpp  encryptionhelper.h  fileitemwidget.cpp  fileitemwidget.h  key_utils.cpp  key_utils.h  loginpage.cpp  loginpage.h  loginpage.ui  loginsessionmanager.cpp  loginsessionmanager.h  main.cpp  mainmenu.cpp  mainmenu.h  mainmenu.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  pages.h  password_utils.cpp  password_utils.h  registerpage.cpp  registerpage.h  registerpage.ui  request_utils.cpp  request_utils.h  resetpasswordpage.cpp  resetpasswordpage.h  resetpasswordpage.ui  resource.qrc  securevector.cpp  securevector.h  simplecontainer.h  titlepage.cpp  titlepage.h  (+13 more)
src/desktop-client/client-404/core/: loginsessionmanager.cpp  loginsessionmanager.h
src/desktop-client/client-404/crypto/: encryptionhelper.cpp  encryptionhelper.h  key_utils.cpp  key_utils.h
src/desktop-client/client-404/tests/: tst_key_utils.cpp  tst_key_utils.h
src/desktop-client/client-404/ui/: anotherbasepage.cpp  anotherbasepage.h  basepage.cpp  basepage.h  fileitemwidget.cpp  fileitemwidget.h  frienditemwidget.cpp  frienditemwidget.h  loginpage.cpp  loginpage.h  mainmenu.cpp  mainmenu.h  mainmenu.ui  mainwindow.cpp  mainwindow.h  permissionwidget.cpp  permissionwidget.h  registerpage.cpp  registerpage.h  resetpasswordpage.cpp  resetpasswordpage.h  resetpasswordpage.ui  titlepage.cpp  titlepage.h  uploadfilepage.cpp  uploadfilepage.h  verifypage.cpp  verifypage.h  verifypage.ui  viewfilespage.cpp  viewfilespage.h  viewfilespage.ui
src/desktop-client/client-404/utils/: custom_deleter.h  file_crypto_utils.cpp  file_crypto_utils.h  file_sharing_manager_utils.cpp  file_sharing_manager_utils.h  file_sharing_utils.cpp  file_sharing_utils.h  friend_storage_utils.cpp  friend_storage_utils.h  json_sanitizer.cpp  json_sanitizer.h  password_utils.cpp  password_utils.h  request_utils.cpp  request_utils.h  securebufferutils.h  securevector.cpp  securevector.h  shared_secret_utils.cpp  shared_secret_utils.h  utils.cpp  utils.h  widget_utils.cpp  widget_utils.h  x3dh_network_utils.cpp  x3dh_network_utils.h
src/server/: README.md  alembic.ini  app.py  config.json  config.py  init_db.py  logger.py  requirements.txt  setup_db.py  test_db_connection.py
src/server/migrations/: env.py
src/server/migrations/versions/: 27970bd5f22c_filenames_can_be_nullable.py  30b6fc8fc25e_add_spk_updated_at_column_to_fix_prod.py  32980ebf4f0b_uuid.py  49b0ea6601d9_switch_to_timezone_aware_timestamps.py  4b1f4a9a3809_merge.py  506c46e6d55c_switch_to_timezone_aware_timestamps.py  5fba2d7adff0_add_timezone_to_datetime_columns.py  6ccf9986b9f7_description.py  6e7100f43d45_spk_and_signature_to_users.py  8888eb0da84b_otpk_updated_at.py  a4b64017ff93_add_spk_updated_at_column_to_fix_prod_3.py  a5ef8f231080_blob_to_string_keys.py  a8807550dc9f_add_spk_updated_at_field.py  b1f2ff5835f8_bye_bytes.py  e6113378af0a_add_otpk_table.py  ecb8d6ff1485_add_df_keys_to_permission_table.py
src/server/models/: tables.py
src/server/routes/: authenication_routes.py  authentication_routes.py  file_routes.py  permission_routes.py
src/server/scripts/: generate_secret_key.py
src/server/test/test_utils/: test_auth.py
src/server/utils/: auth.py  auth_utils.py  db_setup.py  file.py  file_utils.py  jwt.py  permission.py  permission_utils.py  security.py
src/web-client/: LIBSODIUM_MIGRATION.md  README.md  app.py  config.json  config.py  constants.py  encryption_helper.py  exceptions.py  key_utils.py  logger.py  login.py  mykeys.json  password_utils.py  request_utils.py  requirements.txt  resetpassword.py  session_manager.py  signup.py  test.py  test_key_utils.py  uploadfile.py
src/web-client/sdk/: server_api.py
src/web-client/static/: libsodium_test.html  style.css  test_crypto.html
src/web-client/static/js/: login.js  logout.js  resetpassword.js  signup.js  uploadfile.js  verifyuser.js  viewfiles.js
src/web-client/templates/: login.html  mainmenu.html  resetpassword.html  signup.html  title.html  uploadfile.html  verifyuser.html  viewfile.html  viewfiles.html
src/web-client/utils/: encryption_helper.py  file_sharing.py  files.py  key_gen.py  verify_user.py  view_files.py
src/web-client/utils/auth/: login.py  resetpassword.py  session_manager.py  signup.py
tests/: penetration_test_report.md
tests/server/routes/: test_authentication_routes.py  test_file_routes.py  test_permission_routes.py
tests/server/utils/: test_auth.py  test_db_connection.py  test_file.py  test_jwt.py  test_permission.py
